<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NXT Mobile+</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="content">Please enter your message here</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="options">Others</string>
    <string name="not_connected">NOT CONNECTED</string>
    <string name="connect">Connect</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disonnected</string>
	<string name="disagree">I Disagree</string>
 	<string name="agree">I Agree</string>   
 	<string name="next">Next page</string>
 	<string name="registerprompt">Would you like to register?</string>
    <string name="tutorialprompt">Would you like to go through the tutorial?</string>
    <string name="now">Now</string>
 	<string name="later">Later</string>
 	<string name="yes">Yes</string>
 	<string name="no">No</string>
 	<string name="registration">Registration</string>
 	<string name="username">Username</string>
 	<string name="teamname">Team Name</string>
 	<string name="teamnum">Team #</string>
 	<string name="grade">Grade</string>
 	<string name="schoolname">School Name</string>
 	<string name="teacher">Teacher\'s Name</string>
 	<string name="loadimage">Load Image</string>
 	<string name="power">Power </string>
 	<string name="navigation">Navigation</string>
 	<string name="wikispaces">Wiki Spaces</string>
 	
 	<string name="disclaimer">This application was created and intended for the robotic environment only and not for any other uses. Any use of this application other than its intended purpose by its user will not subject us to fault.</string>
 	
 	
</resources>