<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" 
    android:background="#000000">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center|bottom"
        android:textColor="#FFFFF0"
        android:text="@string/registerprompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFF0"
        android:gravity="center" >

        <Button
            android:id="@+id/btnNow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/now" />

        <Button
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/later" />
    </LinearLayout>

</LinearLayout>